      * passing an InstanceState (internal SQLAlchemy state object) to
        attributes.init_collection() or attributes.get_history() is 
        deprecated.  These functions are public API and normally
        expect a regular mapped object instance.
      * the 'engine' parameter to declarative_base() is removed.
        Use the 'bind' keyword argument.
        
- sql
    - the autoincrement flag on column now indicates the column
      which should be linked to cursor.lastrowid, if that method
      is used.  See the API docs for details.
    
    - an executemany() now requires that all bound parameter
      sets require that all keys are present which are 
      present in the first bound parameter set.  The structure
      and behavior of an insert/update statement is very much
      determined by the first parameter set, including which
      defaults are going to fire off, and a minimum of 
      guesswork is performed with all the rest so that performance
      is not impacted.  For this reason defaults would otherwise 
      silently "fail" for missing parameters, so this is now guarded 
      against. [ticket:1566]
      
    - returning() support is native to insert(), update(),
      delete(). Implementations of varying levels of
      functionality exist for Postgresql, Firebird, MSSQL and
      Oracle. returning() can be called explicitly with column
      expressions which are then returned in the resultset,
      usually via fetchone() or first().

      insert() constructs will also use RETURNING implicitly to
      get newly generated primary key values, if the database
      version in use supports it (a version number check is
      performed). This occurs if no end-user returning() was
      specified.
    
    - union(), intersect(), except() and other "compound" types
      of statements have more consistent behavior w.r.t. 
      parenthesizing.   Each compound element embedded within 