@@ -240,6 +240,12 @@ CHANGES
         Use the 'bind' keyword argument.
         
 - sql
+  
+    - the "autocommit" flag on select() and text() as well
+      as select().autocommit() are deprecated - now call
+      .execution_options(autocommit=True) on either of those
+      constructs, also available directly on Connection and orm.Query.
+
     - the autoincrement flag on column now indicates the column
       which should be linked to cursor.lastrowid, if that method
       is used.  See the API docs for details.
@@ -349,14 +355,16 @@ CHANGES
   - transaction isolation level may be specified with
     create_engine(... isolation_level="..."); available on
     postgresql and sqlite. [ticket:443]
-  
+    
   - Connection has execution_options(), generative method
     which accepts keywords that affect how the statement 
     is executed w.r.t. the DBAPI.   Currently supports 
     "stream_results", causes psycopg2 to use a server
-    side cursor for that statement.   Can also be set
-    upon select() and text() constructs directly as well
-    as ORM Query().
+    side cursor for that statement, as well as 
+    "autocommit", which is the new location for the "autocommit"
+    option from select() and text().   select() and
+    text() also have .execution_options() as well as 
+    ORM Query().
     
   - fixed the import for entrypoint-driven dialects to 
     not rely upon silly tb_info trick to determine import
